force-app/main/default/objects/Exam__c/Exam__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC100518 - Created for BREG phase 1</description>
    <label>Exam</label>
    <nameField>
        <label>Exam Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exams</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>