force-app/main/default/objects/Exam__c/fields/AdvisoryAgreement__c.field-meta.xml
<CustomField>
    <fullName>AdvisoryAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101618 - Created for BREG phase 1</description>
    <label>Advisory Agreement</label>
    <type>Checkbox</type>
</CustomField>