force-app/main/default/objects/Exam__c/fields/ADVPartIandII__c.field-meta.xml
<CustomField>
    <fullName>ADVPartIandII__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101618 - Created for BREG phase 1</description>
    <label>ADV Part I and II</label>
    <type>Checkbox</type>
</CustomField>