force-app/main/default/objects/Exam__c/fields/AgeDaysFormula__c.field-meta.xml
<CustomField>
    <fullName>AgeDaysFormula__c</fullName>
    <description>PacPoint-MV050919 - Created for BREG phase 1</description>
    <formula>IF( 
ISPICKVAL(ExamStatus__c, &quot;Exam Completed&quot;), 
DATEVALUE( ClosedDateTime__c) -   InterviewDueDate__c , 
TODAY() - InterviewDueDate__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>