force-app/main/default/objects/Exam__c/fields/AssistantExaminer__c.field-meta.xml
<CustomField>
    <fullName>AssistantExaminer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC101018 - Created for BREG phase 1</description>
    <label>Assistant Examiner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exams1</relationshipName>
    <type>Lookup</type>
</CustomField>