force-app/main/default/objects/Exam__c/fields/BooksandRecords__c.field-meta.xml
<CustomField>
    <fullName>BooksandRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101618 - Created for BREG phase 1</description>
    <label>Books and Records</label>
    <type>Checkbox</type>
</CustomField>