force-app/main/default/objects/Exam__c/fields/Clientfiles__c.field-meta.xml
<CustomField>
    <fullName>Clientfiles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101618 - Created for BREG phase 1</description>
    <label>Client files</label>
    <type>Checkbox</type>
</CustomField>