force-app/main/default/objects/Exam__c/fields/Commissionsstatements__c.field-meta.xml
<CustomField>
    <fullName>Commissionsstatements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101618 - Created for BREG phase 1</description>
    <label>Commissions Statements</label>
    <type>Checkbox</type>
</CustomField>