force-app/main/default/objects/Exam__c/fields/CompletionDateofFinalInterview__c.field-meta.xml
<CustomField>
    <fullName>CompletionDateofFinalInterview__c</fullName>
    <description>PacPoint-RA110718-Created for BREG Phase 1</description>
    <inlineHelpText>If you&apos;ve had a series of interviews, enter the actual completion date of the last interview here.</inlineHelpText>
    <label>Completion Date of Final Interview</label>
    <type>Date</type>
</CustomField>