force-app/main/default/objects/Exam__c/fields/CompletionDateofFirstInterview__c.field-meta.xml
<CustomField>
    <fullName>CompletionDateofFirstInterview__c</fullName>
    <description>PacPoint-IC0100518 - Created for BREG phase 1
PacPoint-RA110718 - Updated for BREG phase 1</description>
    <label>Completion Date of Phone/OnSiteInterview</label>
    <type>Date</type>
</CustomField>