force-app/main/default/objects/Exam__c/fields/CopyofRecentAudits__c.field-meta.xml
<CustomField>
    <fullName>CopyofRecentAudits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101618 - Created for BREG phase 1</description>
    <label>Copy of Recent Audits</label>
    <type>Checkbox</type>
</CustomField>