force-app/main/default/objects/Exam__c/fields/Correspondencefile__c.field-meta.xml
<CustomField>
    <fullName>Correspondencefile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101618 - Created for BREG phase 1</description>
    <label>Correspondence file</label>
    <type>Checkbox</type>
</CustomField>