force-app/main/default/objects/Exam__c/fields/CustomerComplaintFile__c.field-meta.xml
<CustomField>
    <fullName>CustomerComplaintFile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101618 - Created for BREG phase 1</description>
    <label>Customer Complaint File</label>
    <type>Checkbox</type>
</CustomField>