force-app/main/default/objects/Exam__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <description>PacPoint-MD10232019 - Created for BREG phase 1</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>