force-app/main/default/objects/Exam__c/fields/CustomerStatements__c.field-meta.xml
<CustomField>
    <fullName>CustomerStatements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101618 - Created for BREG phase 1</description>
    <label>Customer Statements</label>
    <type>Checkbox</type>
</CustomField>