force-app/main/default/objects/Exam__c/fields/DisclosureForms__c.field-meta.xml
<CustomField>
    <fullName>DisclosureForms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101618 - Created for BREG phase 1</description>
    <label>Disclosure Forms</label>
    <type>Checkbox</type>
</CustomField>