force-app/main/default/objects/Exam__c/fields/DisclosureFormsComments__c.field-meta.xml
<CustomField>
    <fullName>DisclosureFormsComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Disclosure Forms Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>