force-app/main/default/objects/Exam__c/fields/Exam_Category__c.field-meta.xml
<CustomField>
    <fullName>Exam_Category__c</fullName>
    <label>Exam Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Exam</fullName>
            </value>
            <value>
                <fullName>Partial Exam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>