force-app/main/default/objects/Exam__c/fields/Exam_Type__c.field-meta.xml
<CustomField>
    <fullName>Exam_Type__c</fullName>
    <label>Exam Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker-Dealer</fullName>
            </value>
            <value>
                <fullName>Investment Adviser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>