force-app/main/default/objects/Exam__c/fields/ExamAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>ExamAutoNumber__c</fullName>
    <description>PacPoint-IC101018 - Created for BREG phase 1</description>
    <displayFormat>EX-{0000}</displayFormat>
    <label>Exam AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>