force-app/main/default/objects/Exam__c/fields/ExamCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>ExamCompletionDate__c</fullName>
    <description>PacPoint-IC101218 - Created for BREG phase 1</description>
    <label>Exam Completion Date</label>
    <type>Date</type>
</CustomField>