force-app/main/default/objects/Exam__c/fields/ExamLocationIsland__c.field-meta.xml
<CustomField>
    <fullName>ExamLocationIsland__c</fullName>
    <label>Exam Location - Island</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>O&apos;ahu</fullName>
            </value>
            <value>
                <fullName>Maui</fullName>
            </value>
            <value>
                <fullName>Hawai&apos;i</fullName>
            </value>
            <value>
                <fullName>Kaua&apos;i</fullName>
            </value>
            <value>
                <fullName>Moloka&apos;i</fullName>
            </value>
            <value>
                <fullName>Lana&apos;i</fullName>
            </value>
            <value>
                <fullName>Ni&apos;ihau</fullName>
            </value>
            <value>
                <fullName>Kaho&apos;olawe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>