force-app/main/default/objects/Exam__c/fields/ExamLocationType__c.field-meta.xml
<CustomField>
    <fullName>ExamLocationType__c</fullName>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Exam Location - Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home (Main) Office</fullName>
            </value>
            <value>
                <fullName>Branch Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>