force-app/main/default/objects/Exam__c/fields/ExamStatus__c.field-meta.xml
<CustomField>
    <fullName>ExamStatus__c</fullName>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Exam Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Assigned for Examination</fullName>
            </value>
            <value>
                <fullName>Exam in Progress</fullName>
            </value>
            <value>
                <fullName>Deficiency Letter Sent</fullName>
            </value>
            <value>
                <fullName>Deficiency Response Received</fullName>
            </value>
            <value>
                <fullName>Reviewing Deficiency Response</fullName>
            </value>
            <value>
                <fullName>Exam Report Pending</fullName>
            </value>
            <value>
                <fullName>Sent for Supervisor Review</fullName>
            </value>
            <value>
                <fullName>Updates Required by Examiner</fullName>
            </value>
            <value>
                <fullName>Exam Report Approved</fullName>
            </value>
            <value>
                <fullName>Exam Completed</fullName>
            </value>
            <value>
                <fullName>Review in Progress</fullName>
                <isActive>false</isActive>
                <label>Review in Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>