force-app/main/default/objects/Exam__c/fields/Independentcontractoragreement__c.field-meta.xml
<CustomField>
    <fullName>Independentcontractoragreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101618 - Created for BREG phase 1</description>
    <label>Independent contractor agreement</label>
    <type>Checkbox</type>
</CustomField>