force-app/main/default/objects/Exam__c/fields/InterviewDueDate__c.field-meta.xml
<CustomField>
    <fullName>InterviewDueDate__c</fullName>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Announce Date</label>
    <type>Date</type>
</CustomField>