force-app/main/default/objects/Exam__c/fields/InterviewScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>InterviewScheduledDate__c</fullName>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Interview Phone/On Site Scheduled Date</label>
    <type>Date</type>
</CustomField>