force-app/main/default/objects/Exam__c/fields/OnsiteExam__c.field-meta.xml
<CustomField>
    <fullName>OnsiteExam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onsite Exam</label>
    <type>Checkbox</type>
</CustomField>