force-app/main/default/objects/Exam__c/fields/PrivacyPolicy__c.field-meta.xml
<CustomField>
    <fullName>PrivacyPolicy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101618 - Created for BREG phase 1</description>
    <label>Privacy Policy</label>
    <type>Checkbox</type>
</CustomField>