force-app/main/default/objects/Exam__c/fields/PurchaseandSalesblotter__c.field-meta.xml
<CustomField>
    <fullName>PurchaseandSalesblotter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101618 - Created for BREG phase 1</description>
    <label>Purchase and Sales blotter</label>
    <type>Checkbox</type>
</CustomField>