force-app/main/default/objects/Exam__c/fields/SkipCustomEditValidation__c.field-meta.xml
<CustomField>
    <fullName>SkipCustomEditValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-CL02032022 - Created for case 00018526 Bypass Assistant Examiner/Owner edit validation</description>
    <label>SkipCustomEditValidation</label>
    <type>Checkbox</type>
</CustomField>