force-app/main/default/objects/Exam__c/fields/StatusFormula__c.field-meta.xml
<CustomField>
    <fullName>StatusFormula__c</fullName>
    <description>PacPoint-JB103118 - Created for BREG phase 1: Used to fire ProcessBuilder as necessary in approvals order of operations</description>
    <formula>TEXT(ExamStatus__c)</formula>
    <label>StatusFormula</label>
    <type>Text</type>
</CustomField>