force-app/main/default/objects/Exam__c/fields/SupervisoryandCompliance__c.field-meta.xml
<CustomField>
    <fullName>SupervisoryandCompliance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC101618 - Created for BREG phase 1</description>
    <label>Supervisory and Compliance</label>
    <type>Checkbox</type>
</CustomField>