force-app/main/default/objects/Exam__c/fields/UserCanUseUploadFile__c.field-meta.xml
<CustomField>
    <fullName>UserCanUseUploadFile__c</fullName>
    <description>PacPoint-CL01252022 - flag for conditionally showing the file detail creator component in exam record page</description>
    <formula>OR(
NOT(ISBLANK(AssistantExaminer__c)) &amp;&amp; AssistantExaminer__c = $User.Id ,
 NOT(ISBLANK(AssistantExaminer__c)) &amp;&amp; OwnerId =  $User.Id ,
 $Profile.Name = &quot;System Administrator&quot;,
 $Profile.Name = &quot;DCCA SEC/SEB System Administrator&quot;,
ISBLANK( AssistantExaminer__c) &amp;&amp; OR ($Profile.Name = &quot;DCCA SEC Reviewer/Examiner&quot;,
                              $Profile.Name = &quot;DCCA SEC Clerical&quot;,
                              $Profile.Name = &quot;DCCA SEC Exam Supervisor&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserCanUseUploadFile</label>
    <type>Checkbox</type>
</CustomField>