force-app/main/default/objects/Exam__c/validationRules/OwnerOrAssistantExaminerCanEditExams.validationRule-meta.xml
<ValidationRule>
    <fullName>OwnerOrAssistantExaminerCanEditExams</fullName>
    <active>false</active>
    <description>PacPoint-DL-092721 Case #2411 BREG Support</description>
    <errorConditionFormula>AND(
   NOT(ISNEW()),
   $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
   $Profile.Name &lt;&gt; &quot;DCCA SEC/SEB System Administrator&quot;,
   

OR(

       AND(
       NOT(ISBLANK( Owner:User.Username )),
       NOT(ISBLANK( AssistantExaminer__r.Username)),
       Owner:User.Username &lt;&gt; $User.Username,
       AssistantExaminer__r.Username &lt;&gt; $User.Username),

       AND(
       NOT(ISBLANK( AssistantExaminer__r.Username)),
       ISCHANGED(OwnerId),
       NOT(ISBLANK(OwnerId)),
       NOT(ISBLANK(PRIORVALUE(OwnerId ))),
       (PRIORVALUE (OwnerId)) &lt;&gt;  $User.Id,
       AssistantExaminer__r.Username &lt;&gt; $User.Username),

       AND(
       NOT(ISBLANK(Owner:User.Username)),
       ISCHANGED(AssistantExaminer__c),
       NOT(ISBLANK(AssistantExaminer__c)),
       NOT(ISBLANK(PRIORVALUE( AssistantExaminer__c ))),
       (PRIORVALUE (AssistantExaminer__c)) &lt;&gt; $User.Id,
       Owner:User.Username &lt;&gt; $User.Username),

       AND(
       NOT(ISBLANK(AssistantExaminer__r.Username)),
       ISCHANGED(OwnerId),
       (ISBLANK(OwnerId)),
       NOT(ISBLANK(PRIORVALUE(OwnerId ))),
       (PRIORVALUE (OwnerId)) &lt;&gt; $User.Id,
       AssistantExaminer__r.Username &lt;&gt; $User.Username),
     
       AND(
       NOT(ISBLANK(Owner:User.Username)),
       ISCHANGED(AssistantExaminer__c),
       (ISBLANK(AssistantExaminer__c)),
       NOT(ISBLANK(PRIORVALUE( AssistantExaminer__c ))),
       (PRIORVALUE (AssistantExaminer__c)) &lt;&gt; $User.Id,
       Owner:User.Username &lt;&gt; $User.Username)
)
)</errorConditionFormula>
    <errorMessage>Error: Only the Owner and Assistant Examiner can edit this Exam</errorMessage>
</ValidationRule>