force-app/main/default/objects/Exam__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>InterviewDueDate__c</columns>
    <columns>ExamStatus__c</columns>
    <columns>AssistantExaminer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>