force-app/main/default/objects/Exam__c/listViews/Exam_Supervisor.listView-meta.xml
<ListView>
    <fullName>Exam_Supervisor</fullName>
    <columns>NAME</columns>
    <columns>InterviewDueDate__c</columns>
    <columns>Account__c</columns>
    <columns>ExamStatus__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>AssistantExaminer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterviewDueDate__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Exams Scheduled for This Year</label>
</ListView>