force-app/main/default/objects/Exam__c/listViews/MyExams.listView-meta.xml
<ListView>
    <fullName>MyExams</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AssistantExaminer__c</columns>
    <columns>InterviewDueDate__c</columns>
    <columns>InterviewScheduledDate__c</columns>
    <columns>CompletionDateofFirstInterview__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Exams</label>
</ListView>